tests/error/proposal_var.mml
let xs = 3  in 
let _ = xss in ()
